--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,7 @@ jobs:
       - name: Configure CMake
         run: |
           mkdir build
-          cd build
-          cmake ../
+          cd build ; cmake ../
           
       # Runs a set of commands using the runners shell
       - name: Build
