--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Configure CMake
         run: |
           mkdir build
-          cd build ; cmake ../
+          cmake -S./OpenSnapBooth -B./build/
           
       # Runs a set of commands using the runners shell
       - name: Build
